Fix text overflow outside the container in header

--- a/main-style.css
+++ b/main-style.css
@@ -350,17 +350,18 @@ body{
 .header{
     width: 100%;
     height: 100%;
+    vertical-align: auto;
 }
 
 .brand{
     border: 3px solid #ffffff;
     width: 80vw;
-    height: 20vh;
     justify-content: cover;
     margin: 35vh auto;
     text-align: center;
     background-color: #fff;
     opacity: 0.85;
+    height: 20vh;
 }
 
 .brand h1{
@@ -385,8 +386,10 @@ body{
 @media only screen and (min-width: 600px){
         /*HEADER*/
     .brand{
-        height: 25vh;
+        height: 30vh;
         margin: 30vh auto;
+        overflow: hidden;
+
     }
 
     .brand h1{
@@ -398,8 +401,38 @@ body{
     .brand h2{
         font-size:40px;
         top:20%;
+        
+    }
+}
+
+@media only screen and (min-width: 1023px){
+    .brand{
+        height: 25vh;
     }
 
+    .brand h1{
+        font-size: 100px;
+    }
+
+    .brand h2{
+        font-size: 50px;
+    }
+}
+
+@media only screen and (min-width: 1200px){
+    
+    .brand{
+        height: 50vh;
+        margin-top: 23vh;
+    }
+
+    .brand h1{
+        font-size: 90px;
+    }
+
+    .brand h2{
+
+    }
 }
 
 
@@ -413,7 +446,7 @@ body{
 
 .main-title{
     width: 100%;
-    height: 70px;
+    height: 100px;
     position: relative;
     top:2px;
     border-bottom: 4px solid #4fb7c5; 
@@ -425,6 +458,10 @@ body{
     text-decoration: none;
     color: #4de8f3;
     margin-bottom: 5px;
+}
+
+.main-title h1{
+    margin-top: 10px;
 }
 
 .main-row{
